--- a/ecommerce2/.gitignore
+++ b/ecommerce2/.gitignore
@@ -2,6 +2,7 @@
 # Created by https://www.gitignore.io/api/django
 # Edit at https://www.gitignore.io/?templates=django
 .idea/
+*.accdb
 ### Django ###
 *.log
 *.pot
