--- a/ecommerce2/requirements.txt
+++ b/ecommerce2/requirements.txt
@@ -6,7 +6,7 @@ idna==2.9
 mysqlclient==1.4.6
 numpy==1.18.1
 pandas==1.0.1
-Pillow==7.0.0
+Pillow>=7.1.0
 python-dateutil==2.8.1
 pytz==2019.3
 requests==2.23.0
