--- a/ecommerce2/requirements.txt
+++ b/ecommerce2/requirements.txt
@@ -1,6 +1,5 @@
-asgiref==3.4.1
-Django==3.1.12
-Pillow==9.0.0
-pytz==2021.3
-sqlparse==0.4.2
-typing-extensions==4.0.1
+asgiref==3.7.2
+Django==4.2.6
+Pillow==10.1.0
+sqlparse==0.4.4
+typing_extensions==4.8.0
