--- a/news/news_project/requirements.txt
+++ b/news/news_project/requirements.txt
@@ -1,8 +1,7 @@
-asgiref==3.4.1
-Django==3.1.12
+asgiref==3.7.2
+Django==4.2.6
 django-debug-permissions==1.0.0
-django-tinymce==3.4.0
-Pillow==8.2.0
-pytz==2021.3
-sqlparse==0.4.2
-typing-extensions==4.0.1
+django-tinymce==3.6.1
+Pillow==10.1.0
+sqlparse==0.4.4
+typing_extensions==4.8.0
