--- a/realestate/requirements.txt
+++ b/realestate/requirements.txt
@@ -1,7 +1,5 @@
-asgiref==3.2.10
-Django==3.1.12
-django-mysql==3.5.0
-mysqlclient==1.4.6
-Pillow==8.2.0
-pytz==2020.1
-sqlparse==0.3.1
+asgiref==3.7.2
+Django==4.2.6
+Pillow==10.1.0
+sqlparse==0.4.4
+typing_extensions==4.8.0
